# avro

./: composer.json  pom.xml
.github/workflows/: claude-code-review.yml  claude.yml  codex-action.yaml  deploy-docs.yml  test-lang-java.yml  test-lang-py.yml
lang/c++/include/avro/: Config.hh
lang/c++/include/avro/buffer/: BufferReader.hh
lang/c++/include/avro/buffer/detail/: BufferDetail.hh
lang/java/: pom.xml
lang/java/avro/src/main/java/org/apache/avro/reflect/: ReflectData.java
lang/php/lib/Generator/: AvroCodeGenerator.php  AvroTranspiler.php  AvroTranspilerException.php
lang/php/test/Generator/: AvroCodeGeneratorTest.php  AvroTranspilerTest.php
lang/py/: build.sh  pyproject.toml
lang/py/avro/: ipc.py
lang/py/avro/test/: test_script.py
