# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##
# Minimal pip build requirements:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support

[project]
name = "avro"
description = "Avro is a serialization and RPC framework."
version = "1.13.0"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=78.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.autoflake]
expand-star-imports = true
recursive = true
# Put a name in __all_ to explicitly export something a module imports.
# This is clearer and will keep autoflake from trying to remove it.
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "librt>=0.8.1",
    "mypy>=1.19.1",
    "python-snappy>=0.7.3",
    "ruff>=0.15.1",
    "setuptools>=82.0.0",
    "sphinx>=8.1.3",
    "tox>=4.38.0",
    "typechecks>=0.1.0",
    "zstandard>=0.25.0",
]
